<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:iconSpaceReserved="false">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/header_sms">

        <SwitchPreferenceCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:key="@string/key_enable_sms"
            app:iconSpaceReserved="false"
            app:title="@string/enable_sms" />
        <EditTextPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue=""
            android:key="@string/key_target_sms"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/target_title_sms"
            app:iconSpaceReserved="false"
            app:summary="@string/target_summary_sms" />

    </PreferenceCategory>
    <PreferenceCategory
        app:title="@string/header_telegram"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            android:key="@string/key_enable_telegram"
            app:title="@string/enable_telegram" />
        <EditTextPreference
            android:defaultValue=""
            android:key="@string/key_target_telegram"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/target_title_telegram"
            app:iconSpaceReserved="false" />
        <EditTextPreference
            android:defaultValue=""
            android:key="@string/key_telegram_apikey"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/title_telegram_apikey"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/header_web"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            android:key="@string/key_enable_web"
            app:title="@string/enable_web" />
        <EditTextPreference
            android:defaultValue=""
            android:key="@string/key_target_web"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/target_title_web"
            android:summary="@string/target_summary_web"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/header_blocklist"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            android:key="@string/key_enable_blocklist"
            app:iconSpaceReserved="false"
            app:title="@string/enable_blocklist" />

        <EditTextPreference
            android:defaultValue=""
            android:key="@string/key_blocked_numbers"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/title_blocked_numbers"
            android:summary="@string/summary_blocked_numbers"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/header_system"
        app:iconSpaceReserved="false">

        <Preference
            android:key="@string/key_permission_status"
            android:title="@string/title_permission_status"
            android:summary="@string/summary_permission_status"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="@string/key_battery_optimization"
            android:title="@string/title_battery_optimization"
            android:summary="@string/summary_battery_optimization"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="@string/key_autostart_settings"
            android:title="@string/title_autostart_settings"
            android:summary="@string/summary_autostart_settings"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="@string/key_autostart_status"
            android:title="@string/title_autostart_status"
            android:summary="@string/summary_autostart_status"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>